Font: Space between letters adds space after last letter #40180

Closed
opened 2014-05-13 17:52:32 +02:00 by Willi · 19 comments

System Information
Win7/64

Blender Version
blender-2.70-51fa66b-win64

Short description of error
There is an additonal character space - it's size can be specified with Spacing:Letter - after the last character. Therefore, the text is not centered if alignment is set to Center.
There should be only space between the letter's but not after the last letter.

Bild_330.JPG
Note: The text itself does not contain a trailing space. I expect the middle X to be in the center.

Exact steps for others to reproduce the error
Have a look at this in the viewport: FontCentered.blend

**System Information** Win7/64 **Blender Version** blender-2.70-51fa66b-win64 **Short description of error** There is an additonal character space - it's size can be specified with Spacing:Letter - after the last character. Therefore, the text is not centered if alignment is set to Center. There should be only space between the letter's but not after the last letter. ![Bild_330.JPG](https://archive.blender.org/developer/F88845/Bild_330.JPG) Note: The text itself does not contain a trailing space. I expect the middle X to be in the center. **Exact steps for others to reproduce the error** Have a look at this in the viewport: [FontCentered.blend](https://archive.blender.org/developer/F88844/FontCentered.blend)
Author

Changed status to: 'Open'

Changed status to: 'Open'
Author

Added subscriber: @willi-2

Added subscriber: @willi-2
Member

Added subscriber: @totoro-4

Added subscriber: @totoro-4
Member

I see your point but I think this final gap is necessary. For example, if you edit the text, the cursor must be placed after this to add new characters correctly. The funny thing is that the centering of the rows are already calculated without this final gap. So maybe it needs only to add a (spacing:letter - 1)/2 offset to the (offset:x) value during the calculation.

I see your point but I think this final gap is necessary. For example, if you edit the text, the cursor must be placed after this to add new characters correctly. The funny thing is that the centering of the rows are already calculated without this final gap. So maybe it needs only to add a (spacing:letter - 1)/2 offset to the (offset:x) value during the calculation.

Changed status from 'Open' to: 'Archived'

Changed status from 'Open' to: 'Archived'
Campbell Barton self-assigned this 2014-05-14 10:01:35 +02:00

This I would put in the category of "It could work differently",

Text layout code can be improved, but its not a a bug.

This I would put in the category of *"It could work differently"*, Text layout code can be improved, but its not a a bug.
Member

Yep, backward compatibility. Just enter (spacing:letter - 1) / 2 value to the offset:x field manually.

Yep, backward compatibility. Just enter (spacing:letter - 1) / 2 value to the offset:x field manually.
Author

Added subscriber: @ideasman42

Added subscriber: @ideasman42
Author

@ideasman42: I fail to forbear answering in a closed thread. I disagree, because I think that spacing is meant as space between letters. But I do understand that this would be a (major) breaking change. (an additional checkbox controlling this behavior would make sense and keep compatibility).

@totoro-4: Yes, the cursor must be placed during editting, but the space does not have to be added before typing a new character.

@ideasman42: I fail to forbear answering in a closed thread. I disagree, because I think that spacing is meant as space *between* letters. But I do understand that this would be a (major) breaking change. (an additional checkbox controlling this behavior would make sense and keep compatibility). @totoro-4: Yes, the cursor must be placed during editting, but the space does not have to be added before typing a new character.
Member

The pivot supposed to be at the center. So this is a bug but it is hard to change because of compatibility reasons. But as fas as I know, it is possible to add some compatibility code to the file loader to handle old files correctly. It is already in use. The problem comes when the values are animated but I think it rarely happens.

The pivot supposed to be at the center. So this is a bug but it is hard to change because of compatibility reasons. But as fas as I know, it is possible to add some compatibility code to the file loader to handle old files correctly. It is already in use. The problem comes when the values are animated but I think it rarely happens.
Member

It is a closed thread but I have one more remark. This extra space is there in the center, right and justify alignment modes and with the text boxes as well. So it is not easy to change this behaviour. I see some another possible bugs here too, so I've opened a new bug report: #40204

It is a closed thread but I have one more remark. This extra space is there in the center, right and justify alignment modes and with the text boxes as well. So it is not easy to change this behaviour. I see some another possible bugs here too, so I've opened a new bug report: #40204

This issue was referenced by 7c51638292

This issue was referenced by 7c5163829275577884c83184537c2fdd9aba92bc

Changed status from 'Archived' to: 'Open'

Changed status from 'Archived' to: 'Open'

Changed status from 'Open' to: 'Resolved'

Changed status from 'Open' to: 'Resolved'

Closed by commit 7c51638292.

Closed by commit 7c51638292.

@willi-2 - we get so many requests blender behave differently, that we tend to restrict our bug tracker to track real mistakes/crashes in code,

...rather then areas which could work differently or be improved.

Checked this code and committed a fix.

Note that old files with center enabled will now show a little differently as @totoro-4 notes.

@willi-2 - we get so many requests blender behave differently, that we tend to restrict our bug tracker to track real mistakes/crashes in code, ...rather then areas which could work differently or be improved. Checked this code and committed a fix. Note that old files with center enabled will now show a little differently as @totoro-4 notes.
Author

we get so many requests blender behave differently, that we tend to restrict our bug tracker to track real mistakes/crashes in code

I understand. I will rethink twice in future and take this into account. I hope you don't get other reports due to this fix.:) Thanks again for your support!

> we get so many requests blender behave differently, that we tend to restrict our bug tracker to track real mistakes/crashes in code I understand. I will rethink twice in future and take this into account. I hope you don't get other reports due to this fix.:) Thanks again for your support!

@willi-2, no worries, it may interest you that from checking on this report I found quite some issues with our text layout code :)

7c51638292
c7ab68f1c4
ac9eaf9c91
e5b8d84613
42eb36ecf6
4725941f23
8b0729a731
be980b9f7d

@willi-2, no worries, it may interest you that from checking on this report I found quite some issues with our text layout code :) 7c51638292 c7ab68f1c4 ac9eaf9c91 e5b8d84613 42eb36ecf6 4725941f23 8b0729a731 be980b9f7d
Member

@ideasman42 A chain reaction of development? Thank you from me too! You solved these incredible fast.

@ideasman42 A chain reaction of development? Thank you from me too! You solved these incredible fast.
Sign in to join this conversation.
No Label
Interest
Alembic
Interest
Animation & Rigging
Interest
Asset Browser
Interest
Asset Browser Project Overview
Interest
Audio
Interest
Automated Testing
Interest
Blender Asset Bundle
Interest
BlendFile
Interest
Collada
Interest
Compatibility
Interest
Compositing
Interest
Core
Interest
Cycles
Interest
Dependency Graph
Interest
Development Management
Interest
EEVEE
Interest
EEVEE & Viewport
Interest
Freestyle
Interest
Geometry Nodes
Interest
Grease Pencil
Interest
ID Management
Interest
Images & Movies
Interest
Import Export
Interest
Line Art
Interest
Masking
Interest
Metal
Interest
Modeling
Interest
Modifiers
Interest
Motion Tracking
Interest
Nodes & Physics
Interest
OpenGL
Interest
Overlay
Interest
Overrides
Interest
Performance
Interest
Physics
Interest
Pipeline, Assets & IO
Interest
Platforms, Builds & Tests
Interest
Python API
Interest
Render & Cycles
Interest
Render Pipeline
Interest
Sculpt, Paint & Texture
Interest
Text Editor
Interest
Translations
Interest
Triaging
Interest
Undo
Interest
USD
Interest
User Interface
Interest
UV Editing
Interest
VFX & Video
Interest
Video Sequencer
Interest
Virtual Reality
Interest
Vulkan
Interest
Wayland
Interest
Workbench
Interest: X11
Legacy
Blender 2.8 Project
Legacy
Milestone 1: Basic, Local Asset Browser
Legacy
OpenGL Error
Meta
Good First Issue
Meta
Papercut
Meta
Retrospective
Meta
Security
Module
Animation & Rigging
Module
Core
Module
Development Management
Module
EEVEE & Viewport
Module
Grease Pencil
Module
Modeling
Module
Nodes & Physics
Module
Pipeline, Assets & IO
Module
Platforms, Builds & Tests
Module
Python API
Module
Render & Cycles
Module
Sculpt, Paint & Texture
Module
Triaging
Module
User Interface
Module
VFX & Video
Platform
FreeBSD
Platform
Linux
Platform
macOS
Platform
Windows
Priority
High
Priority
Low
Priority
Normal
Priority
Unbreak Now!
Status
Archived
Status
Confirmed
Status
Duplicate
Status
Needs Info from Developers
Status
Needs Information from User
Status
Needs Triage
Status
Resolved
Type
Bug
Type
Design
Type
Known Issue
Type
Patch
Type
Report
Type
To Do
No Milestone
No project
No Assignees
4 Participants
Notifications
Due Date
The due date is invalid or out of range. Please use the format 'yyyy-mm-dd'.

No due date set.

Dependencies

No dependencies set.

Reference: blender/blender#40180
No description provided.