Fix T40180: Space between letters adds space after last letter